service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-librairies
  labels:
    app: my-librairies
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: my-librairies
