deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-librairies
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-librairies
  template:
    metadata:
      labels:
        app: my-librairies
    spec:
      containers:
        - name: my-librairies
          image: mylibrairies
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: my-librairies
  labels:
    app: my-librairies
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: my-librairies
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
  name: my-librairies
  namespace: dev
spec:
  rules:
    - host: mylibrairies.sitcluster.eu-de.containers.appdomain.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: my-librairies
              servicePort: 8080
